force-app/main/default/objects/OWCPrimaryIndustrySelection__mdt/OWCPrimaryIndustrySelection__mdt.object-meta.xml
<CustomObject>
    <description>Used to show the picklist value records on the Online Wage Claim (OWC) form.</description>
    <label>OWCPrimaryIndustrySelection</label>
    <pluralLabel>OWCPrimaryIndustrySelections</pluralLabel>
</CustomObject>