force-app/main/default/objects/OWCPrimaryIndustrySelection__mdt/fields/English_Translation__c.field-meta.xml
<CustomField>
    <fullName>English_Translation__c</fullName>
    <label>English Translation</label>
    <length>250</length>
    <type>Text</type>
</CustomField>