force-app/main/default/objects/OWCPrimaryIndustrySelection__mdt/fields/Mapped_Value__c.field-meta.xml
<CustomField>
    <fullName>Mapped_Value__c</fullName>
    <label>Mapped Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>