force-app/main/default/objects/OWCPrimaryIndustrySelection__mdt/fields/Salesforce_Mapped_Value__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Mapped_Value__c</fullName>
    <label>Salesforce Mapped Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>